--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                     ជូនចំពោះព្រះនាងរបស់បង។បងដឹងថាបងមិនមែនជាមនុស្សប្រុសល្អអ្វីទេតែបងនឹងសន្យាថានឹងមើលថែអូន ស្រឡាញអូនអោយដូចពេជ្យទឹក១០។បងស្លាញ់អូន ពិន យូអុី ❤️
                 </p>
                 <p class="text-lg mt-6 mb-8">
-                     ❤️B sl o❤️
+                     ❤️LOve you bbe❤️
                 </p>
                 <button id="backButton" class="shine-button bg-white text-purple-700 hover:bg-gray-100 font-bold py-3 px-6 rounded-full shadow-lg transform transition duration-300 ease-in-out hover:scale-105 focus:outline-none focus:ring-2 focus:ring-purple-500 focus:ring-opacity-75" aria-label="Click to go back to the front of the card">
                     Go Back
